# ApplyMate-AI

./: .env.development.example  .env.e2e.example  .env.example  .env.production.example  .gitignore  AGENTS.md  CODEX_REQUEST_TEMPLATE.md  README.md  docker-compose.e2e.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 20260718_1501_create_auth_tables.py  20260718_1900_create_career_profile_tables.py  20260718_2100_add_social_auth.py  20260719_1000_add_account_security.py  20260719_1200_create_job_posting_tables.py  20260719_1300_create_job_analysis_tables.py  20260719_1400_create_job_match_tables.py  20260719_1500_create_resume_upload_tables.py  20260719_1600_create_resume_extraction_tables.py  20260719_1700_create_resume_analysis_tables.py  20260719_1800_create_application_document_tables.py  20260719_1900_create_application_tracking_tables.py  20260719_2000_create_schedule_tables.py  20260719_2100_create_calendar_integration_tables.py  (+6 more)
backend/app/: main.py
backend/scripts/: seed_demo_data.py
backend/tests/: test_application_documents.py  test_applications.py  test_auth.py  test_calendar_integration.py  test_dashboard.py  test_document_improvements.py  test_gmail_integration.py  test_health.py  test_job_analysis.py  test_job_match.py  test_job_recommendation_automation.py  test_job_recommendations.py  test_jobs.py  test_notifications.py  test_oauth.py  test_operational_hardening.py  test_profiles.py  test_resume_analysis.py  test_resume_analysis_ai.py  test_resumes.py  test_schedule.py
(+391 files in other folders)
